--- a/css/responsive.css
+++ b/css/responsive.css
@@ -57,6 +57,10 @@
         margin-top: 20px;
         top: auto;
     }
+    #review-form-wrap .row {
+        display: flex;
+        max-width: 600px;
+    }
 }
 
 @media only screen and (min-width:1170px) {
